feat: :sparkles: calculate pace, boolean takeBreak

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "/src/index.ts",
   "scripts": {
-    "dev": "ts-node -r tsconfig-paths/register src/index.ts",
+    "dev": "ts-node -r tsconfig-paths/register src/index.ts --watch",
     "build": "tsc",
     "start": "node dist/server.js"
   },
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/xStranged1/sprintjs-back#readme",
   "description": "",
   "dependencies": {
+    "class-validator": "^0.14.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mysql": "^2.18.1",
