feat: :passport_control: add protected routes, create users
add auth0, checkJwt, checkScopes. create, get, getAll, delete users

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.0.1",
+    "express-oauth2-jwt-bearer": "^1.6.1",
     "pg": "^8.13.2",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20"
